# haskell-editor

./: .gitignore  HaskellEditor.cabal  README.md  haskell-editor.cabal  stack.yaml
app/: App.hs  Edit.hs  Main.hs
app/App/: Class.hs  Model.hs  View.hs
lib/Control/Concurrent/: SplitChan.lhs
lib/Mvc/: Gtk.lhs
lib/Mvc/Gtk/: Cmd.lhs  View.lhs
src/: Edit.hs
