name:                HaskellEditor
version:             0.1.0.0
synopsis:            Simple text editor using Haskell
description:         Please see README.md
homepage:            https://github.com/githubuser/HaskellEditor#readme
license:             BSD3
license-file:        LICENSE
author:              David Kofler
maintainer:          kofler.david@gmail.com
copyright:           2016 David Kofler
category:            Application
build-type:          Simple
cabal-version:       >=1.10

executable HaskellEditor
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       App
                     , Edit
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , gtk3
                     , text
                     , HaskellEditor

library
  hs-source-dirs:      lib
  default-language:    Haskell2010
  ghc-options:         -Wall
  exposed-modules:     Mvc.Gtk
                     , Mvc.Gtk.Cmd
  other-modules:       Control.Concurrent.SplitChan
  build-depends:       base >= 4.7 && < 5
                     , gtk3
                     , mtl
                     , text
                     , transformers
